--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 01 20:47:59 KST 2019
-sdk.dir=/Users/choeminseob/Library/Android/sdk
+#Wed Apr 22 20:16:29 CST 2020
+sdk.dir=/Users/yinglin/Library/Android/sdk
