--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -9,13 +9,16 @@ dependencies:
   flutter:
     sdk: flutter
   fluttertoast: ^7.1.4
+  screenshot_callback:
+    git:
+      url: https://github.com/windows7lake/flutter_screenshot_callback.git
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  screenshot_callback:
-    path: ../
+#  screenshot_callback:
+#    path: ../
 
 flutter:
   uses-material-design: true
