--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ authors:
 homepage: https://github.com/flutter-moum/flutter_screenshot_callback
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
