--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  permission_handler: 8.1.4+2
+  permission_handler: 8.2.2
 
 dev_dependencies:
   flutter_test:
